# occt-learning

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: copilot-instructions.md  copilot-instructions.zh-CN.md
src/: MainWindow.cpp  MainWindow.h  OccDocument.cpp  OccDocument.h  OccView.cpp  OccView.h  main.cpp
